<resources>
    <string name="app_name">MebelDea</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="mail">Почта</string>
    <string name="enter">Войти</string>
    <string-array name="users">
        <item>Работник</item>
        <item>Клиент</item>
        <item>Поставщик</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_email">Введите свою почту</string>
    <string name="your_login">Введите свой логин</string>
    <string name="your_password">Введите свой пароль</string>
    <string name="client">Клиент</string>
    <string name="assortiment">Ассортимент</string>
    <string name="furniture">Мебель</string>
    <string name="price">Цена</string>
    <string name="name">Название</string>
    <string name="model">Модель</string>
    <string name="details">Детали</string>
    <string name="add">Добавить</string>
    <string name="clients">Клиенты</string>
    <string name="count">Количество</string>
    <string name="added">Добавление</string>
    <string name="detail">Деталь</string>
    <string name="name_d">Введите название детали</string>
    <string name="charact">Характеристика</string>
    <string name="charact_d">Введите характеристику</string>
    <string name="count_d">Количество деталей</string>
    <string name="count_edit">Введите количество деталей</string>
    <string name="price_d">Цена за одну единицу</string>
    <string name="edit_price">Введите цену</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="edited">Изменение</string>
    <string name="edit_name_f">Введите название мебели</string>
    <string name="edit_model">Введите модель</string>
    <string name="count_edit_f">Введите количество</string>
    <string name="title_buy">Покупка</string>
    <string name="buy">Купить</string>
</resources>